--- a/src/app/components/count-empleados/count-empleados.component.html
+++ b/src/app/components/count-empleados/count-empleados.component.html
@@ -1,1 +1,46 @@
-<p>count-empleados works!</p>
+<div class="card mt-3">
+  <div class="card-body">
+    <div class="form-check form-check-inline">
+      <input
+        [(ngModel)]="radioBSelected"
+        class="form-check-input"
+        type="radio"
+        name="sexo"
+        id="todos"
+        value="Todos"
+        (change)="radioChange()"
+      />
+      <label class="form-check-label" for="todos"
+        >Todos({{todos}})</label
+      >
+    </div>
+    <div class="form-check form-check-inline">
+      <input
+        [(ngModel)]="radioBSelected"
+        class="form-check-input"
+        type="radio"
+        name="sexo"
+        id="femenino"
+        value="Femenino"
+        (change)="radioChange()"
+      />
+      <label class="form-check-label" for="femenino"
+        >Femenino({{fem}})</label
+      >
+    </div>
+    <div class="form-check form-check-inline">
+      <input
+        [(ngModel)]="radioBSelected"
+        class="form-check-input"
+        type="radio"
+        name="sexo"
+        id="masculino"
+        value="Masculino"
+        (change)="radioChange()"
+      />
+      <label class="form-check-label" for="masculino"
+        >Masculino({{masc}})</label
+      >
+    </div>
+  </div>
+</div>
